# scheduly

./: mkdocs.yml  models.md  pyproject.toml
docs/: features.md  index.md
